daemon: Don't try to infinitely kill monolithic when it fails

Killing monolithic may fail for various reasons (eg. it may not
be running in the first place). Don't try to kill it again when it
fails.

BUG: 343682